--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -11,6 +11,15 @@
   position: fixed;
   top: 50%;
 
+  .wrapper {
+    min-height: 100%;
+    height: 100%;
+    margin: 0 auto -3em;
+  }
+  .footer, .push {
+    height: 3em;
+  }
+
   @media screen and (max-height: 360px) {
     margin-top: 0px;
     margin-bottom: 0px;
